--- a/twitter_clone/package.json
+++ b/twitter_clone/package.json
@@ -7,7 +7,9 @@
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-scripts": "2.1.8",
-    "redux": "^4.0.1"
+    "reactstrap": "^7.1.0",
+    "redux": "^4.0.1",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
